# git-automate-rust

./: .env  Cargo.toml  README.md  git_diff.txt  sonar-project.properties
.github/workflows/: deploy.yml  rust-clippy.yml
src/: main.rs
