[package]
name = "git-automate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
names = "0.14.0"
openai = "1.0.0-alpha.13"
tokio = "1.35.1"
walkdir ="2.3.2"
reqwest = "0.11.23"
serde_json = "1.0.89"
dotenv  = "0.15.0"